@@ -22,6 +22,7 @@ Misc:
  - Qt: Improved HiDPI support
  - Feature: Support ImageMagick 7
  - FFmpeg: Return false if a file fails to open
+ - FFmpeg: Force MP4 files to YUV420P
 
 0.5.2: (2016-12-31)
 Bugfixes:
